--- a/campusvent/src/notification/notification.css
+++ b/campusvent/src/notification/notification.css
@@ -1,3 +1,109 @@
 .notification{
-    flex: 0.3;
+    flex: 0.25;
+    margin: 2rem 0;
+    /* padding: 2rem; */
+}
+.notification-container{
+    width: 90%;
+    margin: 0 auto;    
+}
+.popular-box{
+    padding: 5px 20px !important;
+    border-radius: 10px;
+}
+.popular-box h5{
+    font-size: 1.2rem;
+    margin: 0;
+    color: var(--black);
+}
+.popular-box .popular-event{
+    margin-top: -20px;
+    color: var(--black);
+}
+.popular-box .popular-event h6 {
+    font-size: 0.8rem;
+}
+.popular-box .popular-event p{
+    font-size: 12px;
+    margin-top: -20px;
+}
+.popular-box a{
+    font-size: 15px;
+    text-decoration: none;
+    color: var(--orange);
+}
+.popular-box a:hover{
+    text-decoration: underline;
+}
+
+
+.organizer-box{
+    padding: 15px !important;
+    border-radius: 20px;
+    width: auto;
+    background-color: var(--background-black);
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.organizer-box h5{
+    font-size: 1.2rem;
+    margin: 0;
+    color: var(--black);
+}
+.organizer-div{
+    margin-top: 20px;
+    color: var(--black);
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+.organizer-div img{
+    border-radius: 50%;
+}
+.organizer-div .organizer-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-left: 20px;
+}
+.organizer-div .organizer-name{
+    font-size: 15px;
+    font-weight: 600;
+    margin: 0;
+}
+.organizer-div .organizer-field{
+    font-size: 13px;
+    font-weight: 400;
+    margin: 0;
+    margin-bottom: 5px;
+}
+.organizer-div button{
+    background-color: var(--orange);
+    color: white;
+    min-width: 90px;
+    border-radius: 20px;
+    padding: 6px 5px;
+    text-align: center;
+    font-weight: 500;
+    font-size: medium;
+    cursor: pointer;
+    border: none;
+}
+.organizer-div button:hover{
+     color: var(--orange);
+    background-color: white;
+    border: 1px solid var(--orange);
+}
+
+
+
+/* medium screen */
+@media screen and (max-width: 1200px) {
+    .notification{
+        flex: 0.3;
+    }
 }
