--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   display: flex;
   max-width: 1250px;
   min-width: 90%;
+  margin-top: -10px;
   margin-left: auto;
   margin-right: auto;
   font-family: 'Open Sans', sans-serif;
