--- a/client/src/Components/eventCard/eventCard.css
+++ b/client/src/Components/eventCard/eventCard.css
@@ -65,7 +65,11 @@
     font-size: 18px;
     cursor: pointer;
 }
-
+.bookmark{
+    margin-left: 12px;
+    font-size: 16px;
+    cursor: pointer;
+}
 .event-card .event-extras .event-time{
     font-size: 13px;
     color: var(--small-black);
