implement Oauth sign in and develop the sign in page ui

--- a/client/src/Components/sidebar/sidebar.css
+++ b/client/src/Components/sidebar/sidebar.css
@@ -15,7 +15,6 @@
 .logo{
     text-decoration: none;
     color: black;
-    background-color: blue;
 }
 .logo span{
   color: var(--orange);
@@ -114,8 +113,8 @@ a.profile-btn {
   align-items: center;
 }
 
-img.profile-img {
-  border-radius: 50%;
+.avatar {
+  /* border-radius: 50%; */
   margin-right: 10px;
 }
 
