--- a/client/src/Components/Drawers/Drawers.css
+++ b/client/src/Components/Drawers/Drawers.css
@@ -1,7 +1,14 @@
 .profile-drawer{
     display: flex;
-    flex-direction: column ;
+    flex-direction: column;
+    justify-content: space-between;
+    /* align-items: flex-start; */
 }
 .log-out{
-    /* justify-self: center; */
+    margin-left: 30px;
+    color: var(--orange);
+    display: flex;
+    padding: 8px 25px 8px 10px;
+    font-size: 18px;
+    margin-top: 30px;
 }
