--- a/client/src/Components/feed/feed.css
+++ b/client/src/Components/feed/feed.css
@@ -67,7 +67,7 @@
         flex: 0.7;
     }
 }
-
+/* small screen */
 @media screen and (max-width:500px){
     .feed{
         flex: 1;
@@ -77,7 +77,8 @@
         margin: 0;
     }
     .events-div{
-        width: 95vw;
+        width: 93vw;
+        /* margin-left: -2vw; */
         margin: 2rem auto;
     }
 }
