--- a/client/src/Components/eventCard/eventCard.css
+++ b/client/src/Components/eventCard/eventCard.css
@@ -17,6 +17,7 @@
     width: 100%;
     border-radius: 15px;
     height: 100%;
+    max-height: 100px;
 }
 .event-card .event-info{
     width: 50%;
