--- a/client/src/Components/sidebar/sidebar.css
+++ b/client/src/Components/sidebar/sidebar.css
@@ -194,7 +194,7 @@ a.profile-btn {
 }
 
 @media screen and (max-width:500px){
-    /* .nav-options{
+    .sidebar{
         display: none;
-    } */
+    }
 }
