--- a/client/src/Components/eventCard/eventCard.css
+++ b/client/src/Components/eventCard/eventCard.css
@@ -60,6 +60,7 @@
     display: inline;
     margin: 0;
     padding: 0;
+    cursor: pointer;
 }
 .event-card .event-extras .icons .icon{
     margin-left: 12px;
