--- a/client/src/Components/eventCard/eventCard.css
+++ b/client/src/Components/eventCard/eventCard.css
@@ -1,4 +1,4 @@
-.event-card{
+.event-card {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -8,87 +8,119 @@
     padding: 10px 15px;
     height: auto;
     margin: 0.5rem 0;
+    flex-wrap: wrap;
 }
-.event-card .event-img{
+
+.event-card .event-img {
     width: 30%;
-    border-radius: 25px;
+    border-radius: 15px;
+    flex-shrink: 0;
 }
-.event-card .event-img img{
+
+.event-card .event-img img {
     width: 100%;
     border-radius: 15px;
-    height: 100%;
-    max-height: 100px;
+    height: auto;
+    max-height: 120px;
+    object-fit: cover;
 }
-.event-card .event-info{
+
+.event-card .event-info {
     width: 50%;
-    /* height: 5rem; */
     padding: 3px 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;    
+    justify-content: space-between;
 }
-.event-card .event-info span{
+
+.event-card .event-info span {
     display: inline-block;
 }
-.event-card .event-info .event-date{
+
+.event-card .event-info .event-date {
     color: var(--pink);
     font-size: 15px;
     font-weight: 500;
 }
-.event-card .event-info .event-title{
+
+.event-card .event-info .event-title {
     color: var(--black);
     font-size: 19px;
     font-weight: bold;
 }
-.event-card .event-info .event-message{
+
+.event-card .event-info .event-message {
     color: var(--small-black);
     font-size: 14px;
     font-weight: 300;
 }
-.event-card .event-extras{
+
+.event-card .event-extras {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
     text-align: right;
+    width: auto;
 }
-.event-card .event-extras .icons{
+
+.event-card .event-extras .icons {
     color: var(--black);
     padding: 0;
 }
-.bookmark-container{
+
+.bookmark-container {
     display: inline;
     margin: 0;
     padding: 0;
     cursor: pointer;
 }
-.event-card .event-extras .icons .icon{
+
+.event-card .event-extras .icons .icon {
     margin-left: 12px;
     font-size: 18px;
     cursor: pointer;
 }
-.bookmark{
+
+.bookmark {
     margin-left: 12px;
     font-size: 16px;
     cursor: pointer;
 }
-.event-card .event-extras .event-time{
+
+.event-card .event-extras .event-time {
     font-size: 13px;
     color: var(--small-black);
 }
-.event-card .event-extras .event-price{
+
+.event-card .event-extras .event-price {
     font-size: 18px;
     font-weight: 600;
     color: var(--pink);
 }
 
-@media screen and (max-width:500px){
-    .event-card{
-        padding: 10px;
+@media screen and (max-width: 500px) {
+    .event-card {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 15px;
     }
-    .event-card .event-img img{
-        width: 90%;
-        height: 5rem;
-        /* transform: scale(0.8); */
+
+    .event-card .event-img {
+        width: 100%;
+        max-height: 150px;
+    }
+
+    .event-card .event-info {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .event-card .event-extras {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 10px;
     }
 }
